--- a/src/app/printer-status/printer-status.component.scss
+++ b/src/app/printer-status/printer-status.component.scss
@@ -108,14 +108,8 @@
       }
     }
 
-    &-increase {
-      padding: 3vh 6vw;
-      font-weight: 500;
-      flex: 1;
-    }
-
-    &-decrease {
-      padding: 3vh 6vw;
+    &-key {
+      text-align: center;
       font-weight: 500;
       flex: 1;
     }
