--- a/src/app/control/control.component.scss
+++ b/src/app/control/control.component.scss
@@ -13,105 +13,94 @@
     overflow: visible;
 
     &-arrows {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-around;
-      overflow: visible;
-
-      &__XY {
-        display: block;
-        height: 60vh;
-        text-align: center;
-        float: left;
-        overflow: visible;
-
-        &__wrapper {
-          position: relative;
-          width: 35vw;
-          height: 50vh;
-          font-size: 20vh;
-          overflow: visible;
-        }
-      }
-
-      &--vertical {
-        display: block;
-        height: 60vh;
-        text-align: center;
-        float: left;
-        overflow: visible;
-
-        &__wrapper {
-          position: relative;
-          width: 10vw;
-          height: 50vh;
-          font-size: 20vh;
-          overflow: visible;
-        }
-      }
+      display: grid;
+      grid-template-areas: 
+      ". a . f i" 
+      "b e c h ." 
+      ". d . g j"
+      ". z . y x";
+      padding: 10px;
+      align-items: center;
+      justify-items: center;
+      align-content: center;
     }
   }
 
   &__heading {
     display: block;
-    margin-top: 4vh;
     font-size: 3vw;
     opacity: 0.5;
     font-weight: 400;
+
+    &-1 {
+      grid-area: z;
+    }
+
+    &-2 {
+      grid-area: y;
+    }
+
+    &-3 {
+      grid-area: x;
+    }
   }
 
   &__icon {
-    font-size: 15vw;
-    position: absolute;
+    font-size: 11vw;
+    line-height: 0;
     padding: 0 1.7vw;
     opacity: 0.9;
 
     &-1 {
-      top: -8.5vh;
-      left: 11.3vw;
+      grid-area: a;
     }
 
     &-2 {
-      top: 10vh;
-      left: 0.5vw;
+      grid-area: b;
     }
 
     &-3 {
-      top: 10vh;
-      right: 0.3vh;
+      grid-area: c;
     }
 
     &-4 {
-      top: 30vh;
-      left: 11.3vw;
+      grid-area: d;
     }
 
     &-5 {
-      top: -8vh;
-      left: -1.8vw;
+      grid-area: e;
+      font-size: 8vw;
     }
 
     &-6 {
-      top: 30vh;
-      left: -1.8vw;
+      grid-area: f;
+      font-size: 10vw;
     }
 
     &-7 {
-      font-size: 8vw;
-      top: -0.5vh;
-      left: -1.8vw;
+      grid-area: g;
+      font-size: 10vw;
     }
 
     &-8 {
+      grid-area: h;
       font-size: 8vw;
-      top: 36.5vh;
-      left: -1.8vw;
+    }
+
+    &-9 {
+      grid-area: i;
+      font-size: 8vw;
+    }
+
+    &-10 {
+      grid-area: j;
+      font-size: 8vw;
     }
   }
 
   &__distance {
     width: 50vw;
-    margin-top: 4.5vh;
+    margin-top: 1.5vh;
     display: inline-block;
     border-collapse: separate;
 
