Add monitor page with camera

--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -18,6 +18,10 @@
         <img src="assets/control.svg" class="main-menu__option-icon main-menu__option-icon__3" />
         <ng-container i18n="@@menu-control">control</ng-container>
       </td>
+      <td routerLink="/monitor" matRipple [matRippleUnbounded]="false" [matRippleCentered]="true">
+        <img src="assets/camera.svg" class="main-menu__option-icon main-menu__option-icon__4" />
+        <ng-container i18n="@@menu-monitor">monitor</ng-container>
+      </td>
     </tr>
   </table>
 </div>
