--- a/src/app/main-menu/main-menu.component.scss
+++ b/src/app/main-menu/main-menu.component.scss
@@ -26,7 +26,7 @@
     width: 90vw;
 
     & td {
-      width: 29.66vw;
+      width: 21.66vw;
       display: inline-block;
       text-align: center;
       font-weight: 500;
@@ -48,6 +48,11 @@
     }
 
     &__3 {
+      width: 10.5vw;
+      margin-bottom: 1.6vw;
+    }
+
+    &__4 {
       width: 10.5vw;
       margin-bottom: 1.6vw;
     }
