--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -687,6 +687,7 @@
             <li>"3d printer filament" by Cono Studio Milano from thenounproject.com</li>
             <li>"Folder" by romzicon from thenounproject.com</li>
             <li>"joystick" by ProSymbols from thenounproject.com</li>
+            <li>"Camera" by ProSymbols from thenounproject.com</li>
             <li>"Settings" by Karan from thenounproject.com</li>
             <li>"help" by Rainbow Designs from thenounproject.com</li>
             <li>"Upload" by Nikita Tcherednikov from thenounproject.com</li>
